force hardware render to prevent shift issue in chrome

--- a/css/jquery.slidescale.css
+++ b/css/jquery.slidescale.css
@@ -75,6 +75,7 @@
 .ss .ss-image-list li {
   opacity: 0.5;
   display: inline-block;
+  -webkit-transform: translate3d(0, 0, 0); /* force webkit hardware render */
   -o-transition: opacity 0.3s ease-in;
   -moz-transition: opacity 0.3s ease-in;
   -webkit-transition: opacity 0.3s ease-in;
